bootstrap/tests/errors/arg_type_mismatch.bmb
// Error test: Argument type mismatch
// Expected error: type mismatch or expected
fn add(a: i64, b: i64) -> i64 = a + b;
fn main() -> i64 = add("hello", 1);
